tests/invalid_semantic/return_type_bool.mc
int main() {
    bool ok;
    ok = true;
    return ok;
}
